          - fixed sigsegv when reloading core in combination with exports options
          - added optional workaround for plugins exiting with rc 25 because
            of duplicate execution
          - removed version output to stderr while reloading/starting the core
          - check server definition for duplicates

1.0.8  Fri Jul 22 22:21:34 CEST 2011
          - use identifier for error messages if set
          - fixed ld options (fixes debian bug #632431) thanks Ilya Barygin
          - fixed memory leak in gearman_top
          - fixed memory leak when reloading neb module

1.0.7  Sun Jul  3 15:18:16 CEST 2011
          - show plugin output for exit codes > 3
          - fixed send_multi timestamps when client clock is screwed
          - fixed send_multi for libgearman > 0.14

1.0.6  Sat Jun  4 11:47:02 CEST 2011
          - expand server definitions from :4730 to localhost:4730
          - fixed latency calculation (was below zero sometimes)

1.0.5  Tue May 17 17:46:36 CEST 2011
          - added dupserver option to send_gearman and send_multi too
          - removed warning for the passive only mode

1.0.4  Sun Apr 17 17:58:47 CEST 2011
          - added generic logger
            - enables logging to stdout, file, syslog or nagios
          - changed latency calculation (use time of next_check instead of time of job submission)
          - added nsca replacements docs

1.0.3  Wed Mar 23 21:53:09 CET 2011
          - fixed worker handling exit codes > 127

1.0.2  Fri Mar 11 10:30:21 CET 2011
          - added new option do_hostchecks to completly disable hostchecks
          - fixed reading keyfiles

1.0.1  Sat Mar  5 15:47:22 CET 2011
          - added spawn-rate option for worker
          - added perfdata_mode option to prevent perfdata queue getting to big
          - made gearmand init script work with old libevent versions
          - fixed make dist
          - fixed "make rpm" for SLES11

1.0    Mon Feb  7 11:05:29 CET 2011