@@ -583,8 +583,9 @@ Disabled when set to 0. Default: 1000
 ====
 
 fork_on_exec::
-Use this option to disable an extra fork for each plugin execution. This option
-will reduce the load on the worker host. Default: yes
+Use this option to disable an extra fork for each plugin execution.
+Disabling this option will reduce the load on the worker host, but may
+cause trouble with unclean plugins. Default: yes
 +
 ====
     fork_on_exec=no
