@@ -182,6 +182,10 @@ max-jobs=50
 # as there are jobs waiting
 spawn-rate=1
 
+# Use this option to disable an extra fork for each plugin execution. Disabling
+# this option will reduce the load on the worker host but can lead to problems with
+# unclean plugin. Default: yes
+fork_on_exec=yes
 
 # Workarounds
 
