@@ -37,6 +37,10 @@
 
 typedef void*( mod_gm_worker_fn)(gearman_job_st *job, void *context, size_t *result_size, gearman_return_t *ret_ptr);
 
+gearman_client_st *current_client;
+gearman_client_st *current_client_dup;
+gearman_job_st *current_gearman_job;
+
 int create_client( char ** server_list, gearman_client_st * client);
 int create_client_dup( char ** server_list, gearman_client_st * client);
 int create_worker( char ** server_list, gearman_worker_st * worker);
